--- a/sobreNos.html
+++ b/sobreNos.html
@@ -1,12 +1,21 @@
+<!-- Este documento apresenta estrutura da página sobre nós.  -->
+
 <!DOCTYPE html>
 <html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nós</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/logo.jpg">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Página sobre o Stand">
+        <meta name="keywords" content="Stand Altamente, anúncios de veículos, venda de carros, pesquisa de veículos">
+        <meta name="author" content="Diogo Mata, Diogo Consciência, Miguel Cruz">
+        <meta name="robots" content="">
+        <title>Sobre Nós</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="assets/logo.jpg">
+        <meta property="og:title" content="Sobre Nós - Stand Altamente">
+        <meta property="og:description" content="Pesquise e venda veículos facilmente no Stand Altamente.">
+        <meta property="og:image" content="assets/logo.jpg">
+    </head>
 <body>
     <!-- Cabeçalho da página com uma imagem que funciona como botão de menu e um link para a página inicial -->
     <header>
@@ -21,9 +30,33 @@
         <a href="sobreNos.html">Sobre Nós</a>
     </div>
 
-    <!-- Container principal com área de pesquisa e grid para inserção de conteúdo dinâmico -->
-    <div class="container">
-        <!-- Colocar o link para o git hub -->
+    <!-- Container principal com o conteúdo da página -->
+    <div class="sobre-nos">
+        
+        <div class="sobre-nos-conteudo">
+            <h2>Sobre Nós</h2>
+            <article>
+                <h3>Como surgimos</h3>
+                <p>O Stand Altamente surgiu com a proposta de um projeto unversitario da disciplina de Tecnologias da Internet com o objetivo de utilizarmos as tecnologias apresentadas em aulas e nós proprios podemos explorar mais a fundo as mesmas.</p>
+            </article>        
+            <article>
+                <h3>Objetivos</h3>
+                <p>Inicialmente o objetivo do Stand Altamente não passava de um projeto onde teriamos de nos esforçar para pesquisar e elaborar um bom projeto para atingir uma mota exelete. Mas hoje em dia o nosso grupo constituido por Diogo Mata, Diogo Consciência e Miguel Cruz olhamos para isto com um grande potencial de crescimento e acreditamos que com tempo e dedicação sobre este projeto possamos levalo a avante.</p>
+            </article>
+            <article>
+                <h3>Road Map</h3>
+                <p>- Implementação de um sistema de registo dos utilizadores, desbloqueando novas funcionalidades na plataforma</p>
+                <p>- Permitir aos utilizadores registados editarem ou excluírem os anúncios criados pelos próprios</p>
+                <p>- Possibilidade de adicionar/remover aos favoritos</p>
+            </article>  
+            <article>
+                <a href="https://github.com/DiogoMata77/Apresenta-o-Stand">Saiba mais sobre o nosso projeto</a>
+            </article>
+        </div>
+        <div class="sobre-nos-imagem">
+            <img src="assets/Car rental-pana.svg" alt="Ilustração"/>
+        </div>
+        
     </div>
 
     <footer>
