--- a/sobreNos.html
+++ b/sobreNos.html
@@ -37,11 +37,16 @@
             <h2>Sobre Nós</h2>
             <article>
                 <h3>Como surgimos</h3>
-                <p>O Stand Altamente surgiu com a proposta de um projeto unversitario da disciplina de Tecnologias da Internet com o objetivo de utilizarmos as tecnologias apresentadas em aulas e nós proprios podemos explorar mais a fundo as mesmas.</p>
+                <p>O Stand Altamente surgiu com a proposta de um projeto universitário da disciplina de Tecnologias da Internet visando utilizarmos as 
+                    tecnologias apresentadas em aulas e nós próprios podemos explorar mais a fundo as mesmas.
+                </p>
             </article>        
             <article>
                 <h3>Objetivos</h3>
-                <p>Inicialmente o objetivo do Stand Altamente não passava de um projeto onde teriamos de nos esforçar para pesquisar e elaborar um bom projeto para atingir uma mota exelete. Mas hoje em dia o nosso grupo constituido por Diogo Mata, Diogo Consciência e Miguel Cruz olhamos para isto com um grande potencial de crescimento e acreditamos que com tempo e dedicação sobre este projeto possamos levalo a avante.</p>
+                <p>Inicialmente o objetivo do Stand Altamente não passava de um projeto onde teríamo de nos esforçar para pesquisar e elaborar um bom projeto para atingir 
+                    uma nota excelente. Mas hoje em dia o nosso grupo constituído por Diogo Mata, Diogo Consciência e Miguel Cruz olhamos para isto com um grande 
+                    potencial de crescimento e acreditamos que com tempo e dedicação sobre este projeto possamos levá-lo a avante.
+                </p>
             </article>
             <article>
                 <h3>Road Map</h3>
