--- a/contactarVendedor.html
+++ b/contactarVendedor.html
@@ -25,6 +25,7 @@
     <!-- Menu de navegação com links para a página inicial e para a página de criação de anúncio -->
     <div class="menu" id="menu">
         <a href="index.html">Página Inicial</a> <!-- Link para a página inicial -->
+        <a href="favoritos.html">Favoritos</a> <!-- Link para a página inicial -->
         <a href="criarAnuncio.html" aria-current="page">Criar Anúncio</a> <!-- Link para a página atual de criação de anúncio -->
         <a href="sobreNos.html">Sobre Nós</a> <!-- Link para a página sobre nós -->
     </div>
