--- a/favoritos.html
+++ b/favoritos.html
@@ -1,24 +1,22 @@
-<!-- Este documento apresenta estrutura a página inicial do site.  -->
-
 <!DOCTYPE html>
-<html lang="pt">
-    <head>
-        <meta charset="UTF-8">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Página Inicial do Stand Altamente. Pesquise o veículo dos seus sonhos e crie anúncios facilmente.">
         <meta name="keywords" content="Stand Altamente, anúncios de veículos, venda de carros, pesquisa de veículos">
         <meta name="author" content="Diogo Mata, Diogo Consciência, Miguel Cruz">
         <meta name="robots" content="index, follow">
-        <title>Página Inicial</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="assets/logo.jpg">
         <meta property="og:title" content="Página Inicial - Stand Altamente">
         <meta property="og:description" content="Pesquise e venda veículos facilmente no Stand Altamente.">
         <meta property="og:image" content="assets/logo.jpg">
-    </head>
+        <title>Favoritos</title>
+</head>
 <body>
-    <!-- Cabeçalho da página com uma imagem que funciona como botão de menu e um link para a página inicial -->
-    <header>
+     <!-- Cabeçalho da página com uma imagem que funciona como botão de menu e um link para a página inicial -->
+     <header>
         <img id="menu-bar" src="assets/menu-aberto (1).png " alt="icon menu">
         <a href="index.html">Stand Altamente</a>
     </header>
@@ -33,11 +31,7 @@
 
     <!-- Container principal com área de pesquisa e grid para inserção de conteúdo dinâmico -->
     <div class="container">
-        <div class="area-de-pesquisa">
-            <input type="text" placeholder='Pesquise um veículo' id="campo-pesquisa">
-            <button class="botoes" onclick="pesquisa()">Pesquisar</button>
-        </div>
-
+        <h2>Os Meus Veiculos Favoritos</h2>
         <div class="grid">
         </div>
     </div>
