--- a/sobreNos.html
+++ b/sobreNos.html
@@ -26,6 +26,7 @@
     <!-- Menu de navegação com links para a página inicial e para a página de criação de anúncio -->
     <div class="menu" id="menu">
         <a href="index.html">Página Inicial</a>
+        <a href="favoritos.html">Favoritos</a> <!-- Link para a página inicial -->
         <a href="criarAnuncio.html">Criar Anúncio</a>
         <a href="sobreNos.html">Sobre Nós</a>
     </div>
