--- a/criarAnuncio.html
+++ b/criarAnuncio.html
@@ -26,6 +26,7 @@
     </header>
     <nav aria-label="Menu de navegação principal" class="menu" id="menu"> <!-- Menu de navegação -->
         <a href="index.html">Página Inicial</a> <!-- Link para a página inicial -->
+        <a href="favoritos.html">Favoritos</a> <!-- Link para a página inicial -->
         <a href="criarAnuncio.html" aria-current="page">Criar Anúncio</a> <!-- Link para a página atual de criação de anúncio -->
         <a href="sobreNos.html">Sobre Nós</a> <!-- Link para a página sobre nós -->
     </nav>
